--- a/packages/capper/package.json
+++ b/packages/capper/package.json
@@ -8,6 +8,7 @@
     "@monorepo-lint/cli": "0.1.0",
     "@monorepo-lint/core": "0.1.0",
     "@monorepo-lint/expect-file-contents": "0.1.0",
+    "@monorepo-lint/expect-standard-tsconfig": "0.1.0",
     "@monorepo-lint/utils": "0.1.0"
   },
   "private": true
