--- a/packages/expect-standard-tsconfig/tsconfig.json
+++ b/packages/expect-standard-tsconfig/tsconfig.json
@@ -20,21 +20,5 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "references": [
-    {
-      "path": "../cli"
-    },
-    {
-      "path": "../core"
-    },
-    {
-      "path": "../expect-file-contents"
-    },
-    {
-      "path": "../expect-standard-tsconfig"
-    },
-    {
-      "path": "../utils"
-    }
-  ]
+  "references": []
 }
