--- a/package.json
+++ b/package.json
@@ -7,7 +7,21 @@
   "private": true,
   "scripts": {
     "build": "cd packages/capper; tsc --build",
-    "build:watch": "cd packages/capper; tsc --build --watch"
+    "build:watch": "cd packages/capper; tsc --build --watch",
+    "prettier:all": "prettier 'packages/*/src/**/*.{ts,tsx,less}' --write",
+    "prettier:check": "prettier 'packages/*/src/**/*.{ts,tsx,less}' -l"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "packages/*/src/**/*.{ts,tsx}": [
+      "tslint -c tslint.json --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "workspaces": {
     "packages": [
@@ -16,8 +30,12 @@
   },
   "devDependencies": {
     "@types/node": "^10.12.15",
+    "husky": "^1.2.1",
     "lerna": "^3.6.0",
+    "lint-staged": "^8.1.0",
+    "prettier": "~1.15.2",
     "ts-node": "^7.0.1",
+    "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   }
 }
