--- a/packages/capper/package.json
+++ b/packages/capper/package.json
@@ -9,7 +9,11 @@
     "@monorepo-lint/core": "0.1.0",
     "@monorepo-lint/expect-file-contents": "0.1.0",
     "@monorepo-lint/expect-standard-tsconfig": "0.1.0",
+    "@monorepo-lint/expect-package-script": "0.1.0",
     "@monorepo-lint/utils": "0.1.0"
   },
-  "private": true
+  "private": true,
+  "scripts": {
+    "lint": "tslint --config ../../tslint.json --project ."
+  }
 }
