--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,5 +3,8 @@
   "version": "0.1.0",
   "main": "build/index.js",
   "typings": "build/index.d.ts",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "lint": "tslint --config ../../tslint.json --project ."
+  }
 }
