--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,5 +9,8 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.1"
+  },
+  "scripts": {
+    "lint": "tslint --config ../../tslint.json --project ."
   }
 }
