--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -5,12 +5,12 @@
   "typings": "build/index.d.ts",
   "license": "MIT",
   "dependencies": {
-    "@monorepo-lint/cli": "0.1.0",
-    "@monorepo-lint/core": "0.1.0",
-    "@monorepo-lint/expect-file-contents": "0.1.0",
-    "@monorepo-lint/expect-standard-tsconfig": "0.1.0",
-    "@monorepo-lint/expect-package-script": "0.1.0",
-    "@monorepo-lint/utils": "0.1.0"
+    "@monorepo-lint/cli": "^0.1.0",
+    "@monorepo-lint/core": "^0.1.0",
+    "@monorepo-lint/expect-file-contents": "^0.1.0",
+    "@monorepo-lint/expect-package-script": "^0.1.0",
+    "@monorepo-lint/expect-standard-tsconfig": "^0.1.0",
+    "@monorepo-lint/utils": "^0.1.0"
   },
   "private": true,
   "scripts": {
