--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,8 +11,8 @@
     "@types/yargs": "^12.0.1"
   },
   "dependencies": {
-    "yargs": "^12.0.5",
-    "@monorepo-lint/utils": "0.1.0"
+    "@monorepo-lint/utils": "^0.1.0",
+    "yargs": "^12.0.5"
   },
   "scripts": {
     "lint": "tslint --config ../../tslint.json --project ."
