--- a/packages/expect-standard-tsconfig/package.json
+++ b/packages/expect-standard-tsconfig/package.json
@@ -14,5 +14,6 @@
   },
   "scripts": {
     "lint": "tslint --config ../../tslint.json --project ."
-  }
+  },
+  "gitHead": "889dbf4d639d77e791b3f93d1375e5ceb92d4aa6"
 }
