--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -12,5 +12,6 @@
   },
   "scripts": {
     "lint": "tslint --config ../../tslint.json --project ."
-  }
+  },
+  "gitHead": "65831ea9bbc6917f079c4257d0681d2e3e14784e"
 }
