--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,11 @@
     "yargs": "^12.0.5"
   },
   "scripts": {
-    "lint": "tslint --config ../../tslint.json --project ."
+    "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
+    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
+    "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
+    "test": "../../node_modules/.bin/jest --config ../../jest.config.js --colors",
+    "test:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --colors --watch"
   },
   "publishConfig": {
     "access": "public"
