--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,11 @@
   "typings": "build/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "lint": "tslint --config ../../tslint.json --project ."
+    "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
+    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
+    "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
+    "test": "../../node_modules/.bin/jest --config ../../jest.config.js --colors",
+    "test:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --colors --watch"
   },
   "publishConfig": {
     "access": "public"
