--- a/packages/expect-standard-tsconfig/package.json
+++ b/packages/expect-standard-tsconfig/package.json
@@ -13,7 +13,11 @@
     "@types/jest-diff": "^20.0.0"
   },
   "scripts": {
-    "lint": "tslint --config ../../tslint.json --project ."
+    "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
+    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
+    "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
+    "test": "../../node_modules/.bin/jest --config ../../jest.config.js --colors",
+    "test:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --colors --watch"
   },
   "publishConfig": {
     "access": "public"
