--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -8,6 +8,7 @@
     "@monorepo-lint/expect-file-contents": "^0.1.6",
     "@monorepo-lint/expect-package-script": "^0.1.6",
     "@monorepo-lint/expect-standard-tsconfig": "^0.1.6",
+    "@monorepo-lint/expect-package-order": "^0.1.6",
     "@monorepo-lint/utils": "^0.1.6"
   },
   "scripts": {
