AUTOMATED: run lint fix

--- a/packages/all/tsconfig.json
+++ b/packages/all/tsconfig.json
@@ -37,6 +37,9 @@
       "path": "../expect-standard-tsconfig"
     },
     {
+      "path": "../expect-package-order"
+    },
+    {
       "path": "../utils"
     }
   ]
