--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -20,5 +20,9 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "references": []
+  "references": [
+    {
+      "path": "../utils"
+    }
+  ]
 }
