--- a/packages/expect-standard-tsconfig/tsconfig.json
+++ b/packages/expect-standard-tsconfig/tsconfig.json
@@ -20,5 +20,12 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "references": []
+  "references": [
+    {
+      "path": "../core"
+    },
+    {
+      "path": "../utils"
+    }
+  ]
 }
