--- a/packages/expect-file-contents/package.json
+++ b/packages/expect-file-contents/package.json
@@ -7,13 +7,17 @@
   "main": "build/expectFileContents.js",
   "typings": "build/expectFileContents.d.ts",
   "scripts": {
-    "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
-    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
+    "clean": "rm -rf build",
+    "compile:typescript": "../../node_modules/.bin/tsc",
     "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
-    "test": "../../node_modules/.bin/jest --config ../../jest.config.js --colors",
-    "test:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --colors --watch"
+    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
+    "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
+    "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
+    "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch",
+    "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
+    "@monorepo-lint/core": "~0.1.6",
     "jest-diff": "^23.6.0"
   },
   "devDependencies": {
