--- a/packages/all/tsconfig.json
+++ b/packages/all/tsconfig.json
@@ -31,6 +31,9 @@
       "path": "../expect-file-contents"
     },
     {
+      "path": "../expect-alphabetical-dependencies"
+    },
+    {
       "path": "../expect-package-script"
     },
     {
