--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "scripts": {
+    "ci": "npm-run-all clean compile lint test",
     "clean": "lerna run clean",
     "compile": "lerna run compile:typescript",
     "compile:fast": "cd packages/all; tsc --build",
@@ -30,7 +31,7 @@
     "fix:lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' --write",
     "fix:lint:typescript": "lerna run --no-bail lint:typescript -- --fix",
     "lint": "npm-run-all lint:*",
-    "lint:monorepo-lint": "monorepo-lint check",
+    "lint:monorepo-lint": "monorepo-lint check --verbose",
     "lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' -l",
     "lint:typescript": "lerna run --no-bail lint:typescript",
     "prepublishOnly": "npm-run-all clean compile lint test",
