--- a/packages/expect-alphabetical-dependencies/package.json
+++ b/packages/expect-alphabetical-dependencies/package.json
@@ -7,11 +7,18 @@
   "main": "build/expectAlphabeticalDependencies.js",
   "typings": "build/expectAlphabeticalDependencies.d.ts",
   "scripts": {
+    "clean": "rm -rf build",
+    "compile:typescript": "../../node_modules/.bin/tsc",
+    "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
+    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
+    "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
-    "test": "../../node_modules/.bin/jest --config ../../jest.config.js --colors",
-    "test:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --colors --watch"
+    "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch",
+    "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
+    "@monorepo-lint/core": "~0.1.6",
+    "@monorepo-lint/utils": "~0.1.6",
     "jest-diff": "^23.6.0"
   },
   "devDependencies": {
