--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,10 +18,15 @@
   },
   "dependencies": {
     "@monorepo-lint/utils": "^0.1.9",
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "minimatch": "^3.0.4",
+    "runtypes": "^3.1.2"
   },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "8cfae5bcd0a5c27ce91d300e7c6cf93184fa4d79"
+  "gitHead": "8cfae5bcd0a5c27ce91d300e7c6cf93184fa4d79",
+  "devDependencies": {
+    "@types/minimatch": "^3.0.3"
+  }
 }
