--- a/packages/expect-consistent-dependencies/package.json
+++ b/packages/expect-consistent-dependencies/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@monorepo-lint/core": "~0.1.6",
     "@monorepo-lint/utils": "^0.1.6",
-    "jest-diff": "^23.6.0"
+    "jest-diff": "^23.6.0",
+    "runtypes": "^3.1.2"
   },
   "devDependencies": {
     "@types/jest-diff": "^20.0.0"
