--- a/packages/all/tsconfig.json
+++ b/packages/all/tsconfig.json
@@ -28,22 +28,22 @@
       "path": "../core"
     },
     {
-      "path": "../expect-alphabetical-dependencies"
+      "path": "../rule-alphabetical-dependencies"
     },
     {
-      "path": "../expect-consistent-dependencies"
+      "path": "../rule-consistent-dependencies"
     },
     {
-      "path": "../expect-file-contents"
+      "path": "../rule-file-contents"
     },
     {
-      "path": "../expect-package-order"
+      "path": "../rule-package-order"
     },
     {
-      "path": "../expect-package-script"
+      "path": "../rule-package-script"
     },
     {
-      "path": "../expect-standard-tsconfig"
+      "path": "../rule-standard-tsconfig"
     },
     {
       "path": "../utils"
