--- a/packages/rule-alphabetical-dependencies/package.json
+++ b/packages/rule-alphabetical-dependencies/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "@monorepo-lint/expect-consistent-dependencies",
+  "name": "@monorepo-lint/rule-alphabetical-dependencies",
   "version": "0.1.9",
   "author": "Mac Lockard",
   "url": "https://github.com/monorepo-lint/monorepo-lint",
   "license": "MIT",
-  "main": "build/expectConsistentDependencies.js",
-  "typings": "build/expectConsistentDependencies.d.ts",
+  "main": "build/alphabeticalDependencies.js",
+  "typings": "build/alphabeticalDependencies.d.ts",
   "scripts": {
     "clean": "rm -rf build",
     "compile:typescript": "../../node_modules/.bin/tsc",
+    "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
+    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch",
     "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
-    "@monorepo-lint/core": "~0.1.6",
-    "@monorepo-lint/utils": "^0.1.6",
+    "@monorepo-lint/core": "^0.1.9",
+    "@monorepo-lint/utils": "^0.1.9",
     "jest-diff": "^23.6.0",
     "runtypes": "^3.1.2"
   },
@@ -26,5 +28,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "33f740167f2d7cc4f4ddf85a64addc8a73de0dcd"
+  "gitHead": "8cfae5bcd0a5c27ce91d300e7c6cf93184fa4d79"
 }
