--- a/packages/rule-file-contents/package.json
+++ b/packages/rule-file-contents/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@monorepo-lint/expect-package-script",
+  "name": "@monorepo-lint/rule-file-contents",
   "version": "0.1.9",
   "author": "Eric Anderson",
   "url": "https://github.com/monorepo-lint/monorepo-lint",
   "license": "MIT",
-  "main": "build/expectPackageScript.js",
-  "typings": "build/expectPackageScript.d.ts",
+  "main": "build/fileContents.js",
+  "typings": "build/fileContents.d.ts",
   "scripts": {
     "clean": "rm -rf build",
     "compile:typescript": "../../node_modules/.bin/tsc",
@@ -18,7 +18,6 @@
   },
   "dependencies": {
     "@monorepo-lint/core": "^0.1.9",
-    "@monorepo-lint/utils": "^0.1.9",
     "jest-diff": "^23.6.0",
     "runtypes": "^3.1.2"
   },
