--- a/packages/rule-package-order/package.json
+++ b/packages/rule-package-order/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@monorepo-lint/expect-standard-tsconfig",
+  "name": "@monorepo-lint/rule-package-order",
   "version": "0.1.9",
-  "author": "Eric Anderson",
+  "author": "Mac Lockard",
   "url": "https://github.com/monorepo-lint/monorepo-lint",
   "license": "MIT",
-  "main": "build/expectStandardTsconfig.js",
-  "typings": "build/expectStandardTsconfig.d.ts",
+  "main": "build/packageOrder.js",
+  "typings": "build/packageOrder.d.ts",
   "scripts": {
     "clean": "rm -rf build",
     "compile:typescript": "../../node_modules/.bin/tsc",
-    "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
-    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
+    "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch",
     "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
