--- a/packages/rule-package-script/package.json
+++ b/packages/rule-package-script/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "@monorepo-lint/expect-package-order",
+  "name": "@monorepo-lint/rule-package-script",
   "version": "0.1.9",
-  "author": "Mac Lockard",
+  "author": "Eric Anderson",
   "url": "https://github.com/monorepo-lint/monorepo-lint",
   "license": "MIT",
-  "main": "build/expectPackageOrder.js",
-  "typings": "build/expectPackageOrder.d.ts",
+  "main": "build/packageScript.js",
+  "typings": "build/packageScript.d.ts",
   "scripts": {
     "clean": "rm -rf build",
     "compile:typescript": "../../node_modules/.bin/tsc",
+    "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
+    "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch",
