--- a/packages/rule-banned-dependencies/package.json
+++ b/packages/rule-banned-dependencies/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@monorepo-lint/expect-no-banned-dependencies",
+  "name": "@monorepo-lint/rule-banned-dependencies",
   "version": "0.1.9",
   "author": "Mac Lockard",
   "url": "https://github.com/monorepo-lint/monorepo-lint",
   "license": "MIT",
-  "main": "build/expectNoBannedDependencies.js",
-  "typings": "build/expectNoBannedDependencies.d.ts",
+  "main": "build/bannedDependencies.js",
+  "typings": "build/bannedDependencies.d.ts",
   "scripts": {
     "clean": "rm -rf build",
     "compile:typescript": "../../node_modules/.bin/tsc",
@@ -19,7 +19,8 @@
   "dependencies": {
     "@monorepo-lint/core": "^0.1.9",
     "@monorepo-lint/utils": "^0.1.9",
-    "jest-diff": "^23.6.0"
+    "jest-diff": "^23.6.0",
+    "runtypes": "^3.1.2"
   },
   "devDependencies": {
     "@types/jest-diff": "^20.0.0"
