--- a/packages/rule-file-contents/package.json
+++ b/packages/rule-file-contents/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@monorepo-lint/rule-file-contents",
-  "version": "0.1.9",
+  "version": "1.0.0-alpha.6+74320e3",
   "author": "Eric Anderson",
   "url": "https://github.com/monorepo-lint/monorepo-lint",
   "license": "MIT",
-  "main": "build/fileContents.js",
-  "typings": "build/fileContents.d.ts",
+  "main": "lib/fileContents.js",
+  "typings": "lib/fileContents.d.ts",
   "scripts": {
-    "clean": "rm -rf build",
+    "clean": "rm -rf build lib",
     "compile:typescript": "../../node_modules/.bin/tsc",
     "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
     "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
@@ -17,7 +17,7 @@
     "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
-    "@monorepo-lint/core": "^0.1.9",
+    "@monorepo-lint/core": "^1.0.0-alpha.6+74320e3",
     "jest-diff": "^23.6.0",
     "runtypes": "^3.1.2"
   },
@@ -27,5 +27,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "8cfae5bcd0a5c27ce91d300e7c6cf93184fa4d79"
+  "gitHead": "74320e31cfce7555aece7a98d71d01d2f329be0f"
 }
