--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@monorepo-lint/utils",
-  "version": "0.1.9",
+  "version": "1.0.0-alpha.6+74320e3",
   "author": "Eric Anderson",
   "url": "https://github.com/monorepo-lint/monorepo-lint",
   "license": "MIT",
-  "main": "build/index.js",
-  "typings": "build/index.d.ts",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
-    "clean": "rm -rf build",
+    "clean": "rm -rf build lib",
     "compile:typescript": "../../node_modules/.bin/tsc",
     "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
     "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
@@ -25,5 +25,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "8cfae5bcd0a5c27ce91d300e7c6cf93184fa4d79"
+  "gitHead": "74320e31cfce7555aece7a98d71d01d2f329be0f"
 }
