--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "monorepo-lint",
+  "name": "monorepolint",
   "author": "Eric L Anderson",
-  "url": "https://github.com/monorepo-lint/monorepo-lint",
+  "url": "https://github.com/monorepolint/monorepolint",
   "license": "MIT",
   "private": true,
   "workspaces": {
@@ -28,11 +28,11 @@
     "compile": "lerna run compile:typescript",
     "compile:fast": "cd packages/all; tsc --build",
     "compile:watch": "cd packages/all; tsc --build --watch",
-    "fix:lint:monorepo-lint": "monorepo-lint fix",
+    "fix:lint:monorepolint": "monorepolint fix",
     "fix:lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' --write",
     "fix:lint:typescript": "lerna run --no-bail lint:typescript -- --fix",
     "lint": "npm-run-all lint:*",
-    "lint:monorepo-lint": "monorepo-lint check --verbose",
+    "lint:monorepolint": "monorepolint check --verbose",
     "lint:prettier": "prettier 'packages/*/src/**/*.{ts,tsx,less}' -l",
     "lint:typescript": "lerna run --no-bail lint:typescript",
     "preLernaPublish": "npm-run-all clean compile lint test",
