--- a/packages/rule-package-script/package.json
+++ b/packages/rule-package-script/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@monorepo-lint/rule-package-script",
+  "name": "@monorepolint/rule-package-script",
   "version": "1.0.0-alpha.6+74320e3",
   "author": "Eric Anderson",
-  "url": "https://github.com/monorepo-lint/monorepo-lint",
+  "url": "https://github.com/monorepolint/monorepolint",
   "license": "MIT",
   "main": "lib/packageScript.js",
   "typings": "lib/packageScript.d.ts",
@@ -14,11 +14,11 @@
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "lint": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch",
-    "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
+    "test": "../../node_modules/.bin/jest --colors --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@monorepo-lint/core": "^1.0.0-alpha.6+74320e3",
-    "@monorepo-lint/utils": "^1.0.0-alpha.6+74320e3",
+    "@monorepolint/core": "^1.0.0-alpha.6+74320e3",
+    "@monorepolint/utils": "^1.0.0-alpha.6+74320e3",
     "jest-diff": "^23.6.0",
     "runtypes": "^3.1.2"
   },
