--- a/packages/rule-standard-tsconfig/package.json
+++ b/packages/rule-standard-tsconfig/package.json
@@ -13,7 +13,7 @@
     "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch",
-    "test": "../../node_modules/.bin/jest --colors --passWithNoTests --verbose"
+    "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
     "@monorepolint/core": "^1.0.0-alpha.6+74320e3",
