--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  build_node8:
     docker:
       # specify the version you desire here
       - image: circleci/node:8.11
@@ -27,4 +27,29 @@ jobs:
       # run tests!
       - run: yarn ci
 
+  build_node11:
+    docker:
+      # specify the version you desire here
+      - image: circleci/node:11.4
+  
+    working_directory: ~/repo
 
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: yarn install
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+        
+      # run tests!
+      - run: yarn ci
