--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monorepolint/utils",
-  "version": "1.0.0-alpha.6+74320e3",
+  "version": "0.2.0",
   "author": "Eric Anderson",
   "url": "https://github.com/monorepolint/monorepolint",
   "license": "MIT",
