--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monorepolint/all",
-  "version": "1.0.0-alpha.6+74320e3",
+  "version": "0.2.0",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf build lib",
@@ -13,16 +13,16 @@
     "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
-    "@monorepolint/cli": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/core": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/rule-alphabetical-dependencies": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/rule-banned-dependencies": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/rule-consistent-dependencies": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/rule-file-contents": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/rule-package-order": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/rule-package-script": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/rule-standard-tsconfig": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/utils": "^1.0.0-alpha.6+74320e3"
+    "@monorepolint/cli": "^0.2.0",
+    "@monorepolint/core": "^0.2.0",
+    "@monorepolint/rule-alphabetical-dependencies": "^0.2.0",
+    "@monorepolint/rule-banned-dependencies": "^0.2.0",
+    "@monorepolint/rule-consistent-dependencies": "^0.2.0",
+    "@monorepolint/rule-file-contents": "^0.2.0",
+    "@monorepolint/rule-package-order": "^0.2.0",
+    "@monorepolint/rule-package-script": "^0.2.0",
+    "@monorepolint/rule-standard-tsconfig": "^0.2.0",
+    "@monorepolint/utils": "^0.2.0"
   },
   "publishConfig": {
     "access": "public"
