--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,7 +4,7 @@
     "mrl": "./bin/mrl"
   },
   "name": "@monorepolint/cli",
-  "version": "1.0.0-alpha.6+74320e3",
+  "version": "0.2.0",
   "license": "MIT",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -19,8 +19,8 @@
     "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
-    "@monorepolint/core": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/utils": "^1.0.0-alpha.6+74320e3",
+    "@monorepolint/core": "^0.2.0",
+    "@monorepolint/utils": "^0.2.0",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
