--- a/packages/rule-file-contents/package.json
+++ b/packages/rule-file-contents/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monorepolint/rule-file-contents",
-  "version": "1.0.0-alpha.6+74320e3",
+  "version": "0.2.0",
   "author": "Eric Anderson",
   "url": "https://github.com/monorepolint/monorepolint",
   "license": "MIT",
@@ -17,7 +17,7 @@
     "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
-    "@monorepolint/core": "^1.0.0-alpha.6+74320e3",
+    "@monorepolint/core": "^0.2.0",
     "jest-diff": "^23.6.0",
     "runtypes": "^3.1.2"
   },
