--- a/packages/rule-package-order/package.json
+++ b/packages/rule-package-order/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monorepolint/rule-package-order",
-  "version": "1.0.0-alpha.6+74320e3",
+  "version": "0.2.0",
   "author": "Mac Lockard",
   "url": "https://github.com/monorepolint/monorepolint",
   "license": "MIT",
@@ -15,8 +15,8 @@
     "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
-    "@monorepolint/core": "^1.0.0-alpha.6+74320e3",
-    "@monorepolint/utils": "^1.0.0-alpha.6+74320e3",
+    "@monorepolint/core": "^0.2.0",
+    "@monorepolint/utils": "^0.2.0",
     "jest-diff": "^23.6.0",
     "runtypes": "^3.1.2"
   },
