--- a/packages/rule-file-contents/package.json
+++ b/packages/rule-file-contents/package.json
@@ -7,7 +7,7 @@
   "main": "lib/fileContents.js",
   "typings": "lib/fileContents.d.ts",
   "scripts": {
-    "clean": "rm -rf build lib",
+    "clean": "rm -rf build lib node_modules *.tgz",
     "compile:typescript": "../../node_modules/.bin/tsc",
     "jest:watch": "../../node_modules/.bin/jest --config ../../jest.config.js --watch",
     "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
