--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,11 +18,13 @@
   },
   "dependencies": {
     "@monorepolint/utils": "^0.2.1",
+    "camelcase": "^5.0.0",
     "chalk": "^2.4.1",
     "minimatch": "^3.0.4",
     "runtypes": "^3.1.2"
   },
   "devDependencies": {
+    "@types/camelcase": "^4.1.0",
     "@types/minimatch": "^3.0.3"
   },
   "publishConfig": {
