--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -5,9 +5,5 @@
     "rootDir": "./src",
     "skipLibCheck": true
   },
-  "references": [
-    {
-      "path": "../rules"
-    }
-  ]
+  "references": []
 }
