--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -5,5 +5,12 @@
     "rootDir": "./src",
     "skipLibCheck": true
   },
-  "references": []
+  "references": [
+    {
+      "path": "../core"
+    },
+    {
+      "path": "../rules"
+    }
+  ]
 }
