removed extra keys

--- a/packages/rules/package.json
+++ b/packages/rules/package.json
@@ -16,10 +16,7 @@
     "jest": "../../node_modules/.bin/jest --config ../../jest.config.js",
     "lint:typescript": "../../node_modules/.bin/tslint --config ../../tslint.json --project .",
     "test:watch": "../../node_modules/.bin/jest --colors --passWithNoTests --watch",
-    "test": "../../node_modules/.bin/jest --colors --passWithNoTests",
-    "foo": "bar",
-    "missing": "missing value",
-    "exists": "exists value"
+    "test": "../../node_modules/.bin/jest --colors --passWithNoTests"
   },
   "dependencies": {
     "@monorepolint/core": "^0.2.1",
